Opening an image with image node on Compositing freezes Blender #33209

Closed
opened 2012-11-17 11:46:36 +01:00 by Vicens Juan Tomàs Montserrat · 4 comments

%%%I've tested on Linux 64bits (Kubuntu 12.10). Blender 2.64 r52288 (glibc 2.11) downloaded from builder.blender.org today.
The official build 2.64a downloaded from blender.org works fine.

Procedure: Go to Compositing view -> check Use nodes -> add Input/Image node -> open/load image -> Blender freezes.
I've tried with png and jpg.%%%

%%%I've tested on Linux 64bits (Kubuntu 12.10). Blender 2.64 r52288 (glibc 2.11) downloaded from builder.blender.org today. The official build 2.64a downloaded from blender.org works fine. Procedure: Go to Compositing view -> check Use nodes -> add Input/Image node -> open/load image -> Blender freezes. I've tried with png and jpg.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I forget, no error messages in terminal. Just freezes.

And graphic card: NVIDIA GTX 560Ti%%%

%%%I forget, no error messages in terminal. Just freezes. And graphic card: NVIDIA GTX 560Ti%%%

%%%Fixed in svn rev52294. Thanks for the report, closing.%%%

%%%Fixed in svn rev52294. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33209
No description provided.