Fix #33209: Opening an image with image node on Compositing freezes Blender

Own mistake in image threading commit.